--- a/eSportTournament/Pages/Competitions/EditMatch.cshtml
+++ b/eSportTournament/Pages/Competitions/EditMatch.cshtml
@@ -5,9 +5,8 @@
     ViewData["Title"] = "EditMatch";
 }
 
-<h1>EditMatch</h1>
 
-<h4>Match</h4>
+<h4>@Model.Match.EquipeA.nomEquipe - @Model.Match.EquipeB.nomEquipe</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
