--- a/eSportTournament/Pages/Equipes/Index.cshtml
+++ b/eSportTournament/Pages/Equipes/Index.cshtml
@@ -16,7 +16,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Equipe[0].nomEquipe)
+                Nom
             </th>
             <th></th>
         </tr>
