--- a/eSportTournament/Pages/Competitions/Classement.cshtml
+++ b/eSportTournament/Pages/Competitions/Classement.cshtml
@@ -12,6 +12,8 @@
         <div class="d-flex justify-content-between align-items-center">
             <h1>Classement - @Model.Competition.nomCompetition</h1>
             <input type="submit" value="Mettre fin à la compétition" class="btn btn-primary h-50" />
+            @if (Model.showDelete == true)
+            {<a asp-page="./Delete" asp-route-id="@Model.Competition.ID"> | Supprimer</a>}
         </div>
     </form>
 }
